--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
                 <h5 class="u-text--secondary">Tools</h5>
                 <ul class="c-list">
                 <li class="c-list__item">
-                    Git, Github Actions, Jenkins, Jira, Docker, Postman, Ansible, Apache jmeter, AWS, Digital Ocean, GCP, Splunk, Sonarcube
+                    Git, Github Actions, Jenkins, Jira, Docker, Postman, Ansible, Apache jmeter, AWS, Digital Ocean, GCP, Splunk, SonarQube
                 </li>
                 </ul>
                 <h5 class="u-text--secondary">Other Tecnologies</h5>
@@ -64,7 +64,7 @@
                 <h5 class="u-text--secondary">Process</h5>
                 <ul class="c-list">
                 <li class="c-list__item">
-                    Code Reviews, Sprint Planning, Agile, SDLC, TDD,End to End Development, Requirement Gathering, Project Planning and Estimation, People Management, ITIL
+                    Code Reviews, Sprint Planning, Agile, SDLC, TDD,End to End Development, Requirement Gathering, Project Planning and Estimation, People Management
                 </li>
                 </ul>
                 <h4 class="u-text--primary">Education</h4>
@@ -298,7 +298,7 @@
                 </ul>
                 <h5 class="u-text--secondary">Tools</h5>
                 <ul class="c-list">
-                    <li class="c-list__item">GIT, JIRA, VS code, Envoyer, Forge, Digital Ocean, Mailtrap, Postman, apache jmeter, sonarcube.</li>
+                    <li class="c-list__item">GIT, JIRA, VS code, Envoyer, Forge, Digital Ocean, Mailtrap, Postman, apache jmeter, SonarQube.</li>
                 </ul>
             </div>
         </section>
