--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
                     Git, Github Actions, Jenkins, Jira, Docker, Postman, Ansible, Apache jmeter, AWS, Digital Ocean, GCP, Splunk, SonarQube
                 </li>
                 </ul>
-                <h5 class="u-text--secondary">Other Tecnologies</h5>
+                <h5 class="u-text--secondary">Other Technologies</h5>
                 <ul class="c-list">
                 <li class="c-list__item">
                     HTML, CSS, JSON, Apache, Nginx, MySQL, Postgres, MongoDB, Redis, NodeJS, Ajax, REST API, GraphQL, Webhooks, oAuth, OPEN API, Swagger 
