--- a/index.html
+++ b/index.html
@@ -234,6 +234,39 @@
             </div>
         </section>
 
+      <section>
+            <div class="grid__col grid__col--2-of-3">
+                <ul class="c-list">
+                    <li class="c-list__item">
+                        <strong>That's Living </strong><br />
+                        <span class="u-text--secondary">Lab2100 | Jul 2021 to Jun 2022</span>
+                        <p>
+                          Thatsliving is a premium furniture company that offers a wide range of high-quality furniture products for the home and office. The company's website is a crucial part of its business, as it allows customers to browse and purchase products online.
+                        </p>
+                        <h5 class="u-text--secondary">Responsibilities</h5>
+                        <ul>
+                            <li>Worked on the company's website to make theme changes and multiple integrations, such as a payment gateway and call scheduler</li>
+                            <li>Improved the website's page speed and other features</li>
+                            <li>Demonstrated skills in web development, user interface design, and integration</li>
+                            <li>Helped to improve the customer experience on the website</li>
+                            <li>Implemented custom shipping pricing with carrier service</li>
+                        </ul>
+                    </li>
+                </ul>
+            </div>
+            <div class="grid__col grid__col--1-of-3">
+                <br>
+                <h5 class="u-text--secondary">Technologies</h5>
+                <ul class="c-list">
+                    <li class="c-list__item">HTML, CSS, Javascript, Shopify, jQuery, PHP, Webhooks, liquid</li>
+                </ul>
+                <h5 class="u-text--secondary">Tools</h5>
+                <ul class="c-list">
+                    <li class="c-list__item">Gitlab, Git, JIRA, VS code, Postman</li>
+                </ul>
+            </div>
+        </section>
+
         <section>
             <div class="grid__col grid__col--2-of-3">
                 <ul class="c-list">
