--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
                 <h5 class="u-text--secondary">Tools</h5>
                 <ul class="c-list">
                 <li class="c-list__item">
-                    Git, Github Actions, Jenkins, Jira, Docker, Postman, Ansible, Apache jmeter, AWS, Digital Ocean, GCP, Splunk, SonarQube
+                    Git, Github Actions, Jenkins, Jira, Docker, Postman, Apache jmeter, AWS, Digital Ocean, GCP, Splunk
                 </li>
                 </ul>
                 <h5 class="u-text--secondary">Other Technologies</h5>
@@ -331,7 +331,7 @@
                 </ul>
                 <h5 class="u-text--secondary">Tools</h5>
                 <ul class="c-list">
-                    <li class="c-list__item">GIT, JIRA, VS code, Envoyer, Forge, Digital Ocean, Mailtrap, Postman, apache jmeter, SonarQube.</li>
+                    <li class="c-list__item">GIT, JIRA, VS code, Envoyer, Forge, Digital Ocean, Mailtrap, Postman, apache jmeter.</li>
                 </ul>
             </div>
         </section>
