--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
                 <h5 class="u-text--secondary">Tools</h5>
                 <ul class="c-list">
                 <li class="c-list__item">
-                    Git, Github Actions, Jenkins, Jira, Docker, Postman, Apache jmeter, AWS, Digital Ocean, GCP, Splunk
+                    Git, Github Actions, Jenkins, Jira, Docker, Postman, Apache jmeter, AWS, Digital Ocean, GCP, Splunk, Sonarqube
                 </li>
                 </ul>
                 <h5 class="u-text--secondary">Other Technologies</h5>
@@ -64,7 +64,7 @@
                 <h5 class="u-text--secondary">Process</h5>
                 <ul class="c-list">
                 <li class="c-list__item">
-                    Code Reviews, Sprint Planning, Agile, SDLC, TDD,End to End Development, Requirement Gathering, Project Planning and Estimation, People Management
+                    Code Reviews, Sprint Planning, Agile, SDLC, TDD, End to End Development, Requirement Gathering, Project Planning and Estimation, People Management
                 </li>
                 </ul>
                 <h4 class="u-text--primary">Education</h4>
@@ -331,7 +331,7 @@
                 </ul>
                 <h5 class="u-text--secondary">Tools</h5>
                 <ul class="c-list">
-                    <li class="c-list__item">GIT, JIRA, VS code, Envoyer, Forge, Digital Ocean, Mailtrap, Postman, apache jmeter.</li>
+                    <li class="c-list__item">GIT, JIRA, VS code, Envoyer, Forge, Digital Ocean, Mailtrap, Postman, apache jmeter, Sonarqube.</li>
                 </ul>
             </div>
         </section>
