--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
             <div class="c-media__content">
               <h2 class="l-header__title">Amruth Charan K</h2>
               <div class="l-header__text">
-                "Lead Engineer with 7+ years of expertise in web and full-stack development, project management, and people leadership, adept at bridging technical and business realms to steer dynamic tech projects to success through innovation and strategic leadership."
+                "Team Lead with 8+ years of expertise in web and full-stack development, project management, and people leadership, adept at bridging technical and business realms to steer dynamic tech projects to success through innovation and strategic leadership."
               </div>
             </div>
         </div>
@@ -106,9 +106,18 @@
                 <h4 class="u-text--primary">Experience</h4>
                 <ul class="c-list">
                 <li class="c-list__item">
+                    <strong>Continent8</strong> - Lead Software Engineer<br /><span
+                    class="u-text--secondary"
+                    >Hyderabad | 2024 - Current</span
+                    >
+                    <p>
+                        Successfully led a team of 5 developers, enhancing code, architecting projects with modern techniques, and optimizing applications for a sleek, fast, and intuitive experience. As a team lead, I manage sprint planning, project execution, estimation, and resource planning to ensure high-quality results. I conduct code reviews to uphold best practices and mentor junior developers, fostering their growth through knowledge transfer and skill refinement.
+                    </p>
+                </li>
+                <li class="c-list__item">
                     <strong>Fubeus</strong> - Lead Engineer<br /><span
                     class="u-text--secondary"
-                    >Bangalore | 2022 - Current</span
+                    >Bangalore | 2022 - 2024</span
                     >
                     <p>
                         Successfully managed projects for esteemed clients, including a prominent US-based client and a leading semiconductor industry player. As a current team lead, I drive a proficient team of developers to optimize operations, ensuring the delivery of high-quality results. My expertise encompasses sprint planning, project execution, estimation, and resource planning, facilitating seamless project advancement. By conducting code reviews, I bolster code quality, adhering to industry best practices. My proficiency in DevOps and CI/CD development expedites software releases, and my mentoring of junior developers nurtures growth through knowledge transfer and skill refinement.
@@ -169,8 +178,40 @@
             <div class="grid__col grid__col--2-of-3">
                 <ul class="c-list">
                     <li class="c-list__item">
+                        <strong>Coms</strong><br />
+                        <span class="u-text--secondary">Continent8 | Feb 2024 to till date</span>
+                        <p>
+                            Coms is a crucial MIS application for Continent8, utilized daily by the sales, accounts, finance, and operations teams. It plays a vital role in streamlining their workflows, ensuring smooth and efficient operations.
+                        </p>
+                        <h5 class="u-text--secondary">Responsibilities</h5>
+                        <ul>
+                            <li>Implement Docker to containerize the application for consistent and efficient deployments.</li>
+                            <li>Upgrade the application from PHP 5.6 to PHP 8 to enhance performance, security, and modern feature support.</li>
+                            <li>Update the Slim framework from version 2 to version 4, along with all other dependencies.</li>
+                            <li>Add comprehensive test cases using Codeception to ensure functionality and stability.</li>
+                            <li>Mentor the team to manage the application effectively and resolve daily operational issues.</li>
+                        </ul>
+                    </li>
+                </ul>
+            </div>
+            <div class="grid__col grid__col--1-of-3">
+                <br>
+                <h5 class="u-text--secondary">Technologies</h5>
+                <ul class="c-list">
+                    <li class="c-list__item">PHP, Slim, MySQL, HTML, CSS, Javascript, Bootstrap, jQuery, REST API, Docker, Groovy, Cron</li>
+                </ul>
+                <h5 class="u-text--secondary">Tools</h5>
+                <ul class="c-list">
+                    <li class="c-list__item">Gitlab, Git, JIRA, VS code, Jenkins, Postman, Service Now, Swagger</li>
+                </ul>
+            </div>
+        </section>
+        <section>
+            <div class="grid__col grid__col--2-of-3">
+                <ul class="c-list">
+                    <li class="c-list__item">
                         <strong>QMS </strong><br />
-                        <span class="u-text--secondary">Fubeus | Mar 2023 to till date</span>
+                        <span class="u-text--secondary">Fubeus | Mar 2023 to Feb 2024</span>
                         <p>
                             QMS serves as an internal tool for NXP Semiconductors, streamlining workflow management through automated signoff and checklist processes.
                         </p>
